# seb-linux

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: .gitkeep
docs/: .gitkeep
examples/: mvp.json
include/: .gitkeep
packaging/flatpak/: README.md  io.seb.linux.yaml
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Config.cpp  Config.h  ConfigLoader.cpp  ConfigLoader.h  IdleInhibitor.cpp  IdleInhibitor.h  core.cpp  core.h
src/web/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  RequestInterceptor.cpp  RequestInterceptor.h  SecureWebEnginePage.cpp  SecureWebEnginePage.h  web.cpp  web.h
tests/: .gitkeep
